--- a/rand.css
+++ b/rand.css
@@ -12,7 +12,7 @@ body {
   height: 100vh;
 
   font-family: cursive;
-  background-color: darkblue;
+  background-color: yellow;
   text-align: center;
 }
 
