--- a/rand.css
+++ b/rand.css
@@ -14,6 +14,7 @@ body {
   font-family: cursive;
   background-color: yellow;
   text-align: center;
+  color: rgb(0,255,255);
 }
 
 button {cursive
