--- a/rand.css
+++ b/rand.css
@@ -19,7 +19,7 @@ body {
 button {cursive
   font-size: 24px;
   font-family: monospace;
-  background-color: black;
+  background-color: white;
 }
 
 img {
